components/Navbar/Navbar.module.css
/* Navbar.module.css */
.navbarContainer {
  display: flex;
  justify-content: space-between;
  height: 120px;
  transition: height 0.3s ease;
  background-color: white;
  padding: 0px 20px;
}

.navbarContainer.active {
  height: 180px;

}

.logoWrapper {
  padding: 20px 10px;
}

.logoWrapper img {
  width: 80px;
  height: 80px;
}

@media (max-width: 768px) {
  .logoWrapper {
    padding: 30px 5px;
  }
  .logoWrapper img {
    width: 60px;
    height: 60px;
  }
}

.smallscreen {
  display: none;
}


.navLinks {
  display: flex;
  justify-content: space-between;
  width: 400px;
  align-items: center;
  font-family: "Oswald", sans-serif;
  font-weight: 700;
  list-style: none;
  color: black;
  padding: 20px 0px;
  margin-left: -50px;

  text-decoration: none;
}

.nav.open {
  display: none;
}

.navLinks.open{
  display: none;
}
.nav {
  display: flex;
  align-items: center;
  
}
.mobileMenu {
  list-style: none;
  position: fixed;
  top: 0;
  right: 0;
  width: 100%;
  margin-top: 0;
  height: 100vh;
  background-color: rgb(255, 255, 255);

  flex-direction: column;
  display: flex;
  justify-content: flex-start;
  align-items: flex-end;
  z-index: 5;
  padding: 45px 48px;
}

.mobileMenu li {
  padding-top: 40px;
  font-size: 1.8rem;
  font-weight: 300;
}

.navLinkItem {
  border-bottom: 2px solid transparent;
  padding-bottom: 5px;
  padding-top: 20px;
}

.navLinkItem a {
  padding: 5px;
}

.navLinkItem:hover {
  border-color: red;
}

.cartIcon {
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding-right: 10px;
  align-items: center;
}

.cartIcon.open {
  display: none;
}
.cartIcon .shoppingIcon {
  font-size: 24px;
}

.hamburguer {
  padding: 30px;
}

.cartIcon p {
  font-size: 16px;
  margin: -2px;
  font-weight: 500;
}

.blackRibbon {
  background-color: black;
  height: 50px;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
}

.freeDeliveryContainer {
  font-size: 18px;
  font-weight: 500;
  background-color: black;
  height: 60px;
  color: white;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.freeDeliveryLink {
  text-decoration: none;
  color: rgb(255, 255, 255);
}

.linkIconContainer {
  padding-top: 1px;
  margin-left: 10px;
  width: 15px;
}

@keyframes dropRibbon {
  from {
    transform: translateY(-100%);
  }
  to {
    transform: translateY(0);
  }
}

